src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 95 contains 1 shift/reduce conflicts.

terminal '&' is unused
terminal '|' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Statement                          (0)
	Statement -> Expr ';'                              (1)
	Statement -> let var '=' Expr ';'                  (2)
	Statement -> const var '=' Expr ';'                (3)
	Statement -> Type var '=' Expr ';'                 (4)
	Statement -> fn var '(' ParamList ')' Type '{' StmtList '}'   (5)
	Statement -> fn var '(' ParamList ')' '{' StmtList '}'   (6)
	Statement -> class cname '{' ClassMembers '}'      (7)
	Statement -> for var in Expr '{' StmtList '}'      (8)
	Statement -> var '+=' Expr ';'                     (9)
	Statement -> var '-=' Expr ';'                     (10)
	Statement -> var '*=' Expr ';'                     (11)
	Statement -> var '/=' Expr ';'                     (12)
	Statement -> var '%=' Expr ';'                     (13)
	Statement -> var '++' ';'                          (14)
	Statement -> var '--' ';'                          (15)
	Statement -> return Expr ';'                       (16)
	ExprList ->                                        (17)
	ExprList -> Expr                                   (18)
	ExprList -> Expr ',' ExprList                      (19)
	Type -> intType                                    (20)
	Type -> boolType                                   (21)
	Type -> stringType                                 (22)
	Type -> Type '[' ']'                               (23)
	ParamList ->                                       (24)
	ParamList -> Param                                 (25)
	ParamList -> Param ',' ParamList                   (26)
	Param -> Type var                                  (27)
	StmtList ->                                        (28)
	StmtList -> Statement StmtList                     (29)
	ClassMembers ->                                    (30)
	ClassMembers -> ClassMember ClassMembers           (31)
	ClassMember -> var ';'                             (32)
	ClassMember -> var '(' var ')' '{' return Expr '}'   (33)
	Expr -> int                                        (34)
	Expr -> real                                       (35)
	Expr -> E                                          (36)
	Expr -> PHI                                        (37)
	Expr -> PI                                         (38)
	Expr -> AVOGADRO                                   (39)
	Expr -> true                                       (40)
	Expr -> false                                      (41)
	Expr -> null                                       (42)
	Expr -> string                                     (43)
	Expr -> var                                        (44)
	Expr -> '(' Expr ')'                               (45)
	Expr -> '!' Expr                                   (46)
	Expr -> 'Math.sqrt' '(' Expr ')'                   (47)
	Expr -> '-' Expr                                   (48)
	Expr -> Expr '+' Expr                              (49)
	Expr -> Expr '-' Expr                              (50)
	Expr -> Expr '*' Expr                              (51)
	Expr -> Expr '/' Expr                              (52)
	Expr -> Expr '**' Expr                             (53)
	Expr -> Expr '%' Expr                              (54)
	Expr -> Expr '==' Expr                             (55)
	Expr -> Expr '!=' Expr                             (56)
	Expr -> Expr '>' Expr                              (57)
	Expr -> Expr '<' Expr                              (58)
	Expr -> Expr '&&' Expr                             (59)
	Expr -> Expr '||' Expr                             (60)
	Expr -> Expr '<=' Expr                             (61)
	Expr -> Expr '>=' Expr                             (62)
	Expr -> if Expr '{' Expr '}' else '{' Expr '}'     (63)
	Expr -> Expr '?' Expr ':' Expr                     (64)
	Expr -> for var in Expr '{' Expr '}'               (65)
	Expr -> toString '(' Expr ')'                      (66)
	Expr -> typeof '(' Expr ')'                        (67)
	Expr -> '[' ExprList ']'                           (68)
	Expr -> var '=>' Expr                              (69)
	Expr -> function '(' var ')' '{' return Expr '}'   (70)
	Expr -> Expr '(' Expr ')'                          (71)
	Expr -> while '(' Expr ')' '{' Expr '}'            (72)
	Expr -> new cname '(' ExprList ')'                 (73)
	Expr -> Expr '.' var '(' Expr ')'                  (74)
	Expr -> Expr '.' var                               (75)
	Expr -> Expr '.' len                               (76)
	Expr -> print '(' Expr ')'                         (77)
	Expr -> match Expr '{' MatchCases '}'              (78)
	Expr -> err '(' string ')'                         (79)
	Expr -> '(' Expr ',' ExprList ')'                  (80)
	Expr -> isErr '(' Expr ')'                         (81)
	Expr -> this                                       (82)
	MatchCases -> MatchCase                            (83)
	MatchCases -> MatchCase ',' MatchCases             (84)
	MatchCase -> Pattern '=>' Expr                     (85)
	Pattern -> int                                     (86)
	Pattern -> real                                    (87)
	Pattern -> true                                    (88)
	Pattern -> false                                   (89)
	Pattern -> string                                  (90)
	Pattern -> null                                    (91)
	Pattern -> var                                     (92)
	Pattern -> '_'                                     (93)
	Pattern -> '[' PatternList ']'                     (94)
	Pattern -> '(' Pattern ')'                         (95)
	PatternList ->                                     (96)
	PatternList -> Pattern                             (97)
	PatternList -> Pattern ',' PatternList             (98)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { IntTok $$ }
	real           { RealTok $$ }
	E              { ETok }
	PI             { PiTok }
	PHI            { PhiTok }
	AVOGADRO       { AvogadroTok }
	'+'            { PlusTok }
	'-'            { MinusTok }
	'*'            { MultTok }
	'/'            { DivTok }
	'+='           { PlusEqTok }
	'-='           { MinusEqTok }
	'*='           { MultEqTok }
	'/='           { DivEqTok }
	'%='           { ModEqTok }
	'--'           { DecrementTok }
	'('            { LParenTok }
	')'            { RParenTok }
	'!'            { NotTok }
	'%'            { ModTok }
	'=='           { EqTok }
	'**'           { ExpTok }
	'>'            { GTTok }
	'<'            { LTTok }
	'<='           { LeqTok }
	'>='           { GeqTok }
	'!='           { NeqTok }
	'Math.sqrt'    { MathSqrtTok }
	true           { TrueTok }
	false          { FalseTok }
	null           { NullTok }
	var            { VarTok $$ }
	string         { StringTok $$ }
	if             { IfTok }
	else           { ElseTok }
	let            { LetTok }
	const          { ConstTok }
	for            { ForTok }
	'='            { AssignTok }
	'&&'           { AndTok }
	'||'           { OrTok }
	';'            { SemicolonTok }
	fn             { FnTok }
	function       { FunctionTok }
	'=>'           { ArrowTok }
	toString       { ToStringTok }
	typeof         { TypeOfTok }
	print          { PrintTok }
	intType        { IntTypeTok }
	boolType       { BoolTypeTok }
	stringType     { StringTypeTok }
	in             { InTok }
	len            { LenTok }
	','            { CommaTok }
	return         { ReturnTok }
	'&'            { RefTok }
	while          { WhileTok }
	match          { MatchTok }
	'|'            { PipeTok }
	'_'            { WildcardTok }
	cname          { CnameTok $$ }
	class          { ClassTok }
	new            { NewTok }
	this           { ThisTok }
	'.'            { DotTok }
	'{'            { LBraceTok }
	'}'            { RBraceTok }
	'['            { LBracketTok }
	']'            { RBracketTok }
	'?'            { QuestionTok }
	':'            { ColonTok }
	'++'           { IncrementTok }
	err            { ErrTok }
	isErr          { IsErrTok }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Statement       rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
	ExprList        rules 17, 18, 19
	Type            rules 20, 21, 22, 23
	ParamList       rules 24, 25, 26
	Param           rule  27
	StmtList        rules 28, 29
	ClassMembers    rules 30, 31
	ClassMember     rules 32, 33
	Expr            rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82
	MatchCases      rules 83, 84
	MatchCase       rule  85
	Pattern         rules 86, 87, 88, 89, 90, 91, 92, 93, 94, 95
	PatternList     rules 96, 97, 98

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Statement                         (rule 0)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 33
	string         shift, and enter state 17
	if             shift, and enter state 18
	let            shift, and enter state 34
	const          shift, and enter state 35
	for            shift, and enter state 36
	fn             shift, and enter state 37
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	intType        shift, and enter state 38
	boolType       shift, and enter state 39
	stringType     shift, and enter state 40
	return         shift, and enter state 41
	while          shift, and enter state 24
	match          shift, and enter state 25
	class          shift, and enter state 42
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Statement      goto state 31
	Type           goto state 32
	Expr           goto state 2

State 1

	Statement -> . Expr ';'                             (rule 1)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 2

State 2

	Statement -> Expr . ';'                             (rule 1)
	Expr -> Expr . '+' Expr                             (rule 49)
	Expr -> Expr . '-' Expr                             (rule 50)
	Expr -> Expr . '*' Expr                             (rule 51)
	Expr -> Expr . '/' Expr                             (rule 52)
	Expr -> Expr . '**' Expr                            (rule 53)
	Expr -> Expr . '%' Expr                             (rule 54)
	Expr -> Expr . '==' Expr                            (rule 55)
	Expr -> Expr . '!=' Expr                            (rule 56)
	Expr -> Expr . '>' Expr                             (rule 57)
	Expr -> Expr . '<' Expr                             (rule 58)
	Expr -> Expr . '&&' Expr                            (rule 59)
	Expr -> Expr . '||' Expr                            (rule 60)
	Expr -> Expr . '<=' Expr                            (rule 61)
	Expr -> Expr . '>=' Expr                            (rule 62)
	Expr -> Expr . '?' Expr ':' Expr                    (rule 64)
	Expr -> Expr . '(' Expr ')'                         (rule 71)
	Expr -> Expr . '.' var '(' Expr ')'                 (rule 74)
	Expr -> Expr . '.' var                              (rule 75)
	Expr -> Expr . '.' len                              (rule 76)

	'+'            shift, and enter state 76
	'-'            shift, and enter state 77
	'*'            shift, and enter state 78
	'/'            shift, and enter state 79
	'('            shift, and enter state 80
	'%'            shift, and enter state 81
	'=='           shift, and enter state 82
	'**'           shift, and enter state 83
	'>'            shift, and enter state 84
	'<'            shift, and enter state 85
	'<='           shift, and enter state 86
	'>='           shift, and enter state 87
	'!='           shift, and enter state 88
	'&&'           shift, and enter state 89
	'||'           shift, and enter state 90
	';'            shift, and enter state 91
	'.'            shift, and enter state 92
	'?'            shift, and enter state 93


State 3

	Expr -> int .                                       (rule 34)

	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'%'            reduce using rule 34
	'=='           reduce using rule 34
	'**'           reduce using rule 34
	'>'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'>='           reduce using rule 34
	'!='           reduce using rule 34
	'&&'           reduce using rule 34
	'||'           reduce using rule 34
	';'            reduce using rule 34
	','            reduce using rule 34
	'.'            reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34
	']'            reduce using rule 34
	'?'            reduce using rule 34
	':'            reduce using rule 34


State 4

	Expr -> real .                                      (rule 35)

	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'%'            reduce using rule 35
	'=='           reduce using rule 35
	'**'           reduce using rule 35
	'>'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'>='           reduce using rule 35
	'!='           reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35
	';'            reduce using rule 35
	','            reduce using rule 35
	'.'            reduce using rule 35
	'{'            reduce using rule 35
	'}'            reduce using rule 35
	']'            reduce using rule 35
	'?'            reduce using rule 35
	':'            reduce using rule 35


State 5

	Expr -> E .                                         (rule 36)

	'+'            reduce using rule 36
	'-'            reduce using rule 36
	'*'            reduce using rule 36
	'/'            reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'%'            reduce using rule 36
	'=='           reduce using rule 36
	'**'           reduce using rule 36
	'>'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'>='           reduce using rule 36
	'!='           reduce using rule 36
	'&&'           reduce using rule 36
	'||'           reduce using rule 36
	';'            reduce using rule 36
	','            reduce using rule 36
	'.'            reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	']'            reduce using rule 36
	'?'            reduce using rule 36
	':'            reduce using rule 36


State 6

	Expr -> PI .                                        (rule 38)

	'+'            reduce using rule 38
	'-'            reduce using rule 38
	'*'            reduce using rule 38
	'/'            reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	'%'            reduce using rule 38
	'=='           reduce using rule 38
	'**'           reduce using rule 38
	'>'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'>='           reduce using rule 38
	'!='           reduce using rule 38
	'&&'           reduce using rule 38
	'||'           reduce using rule 38
	';'            reduce using rule 38
	','            reduce using rule 38
	'.'            reduce using rule 38
	'{'            reduce using rule 38
	'}'            reduce using rule 38
	']'            reduce using rule 38
	'?'            reduce using rule 38
	':'            reduce using rule 38


State 7

	Expr -> PHI .                                       (rule 37)

	'+'            reduce using rule 37
	'-'            reduce using rule 37
	'*'            reduce using rule 37
	'/'            reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'%'            reduce using rule 37
	'=='           reduce using rule 37
	'**'           reduce using rule 37
	'>'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'>='           reduce using rule 37
	'!='           reduce using rule 37
	'&&'           reduce using rule 37
	'||'           reduce using rule 37
	';'            reduce using rule 37
	','            reduce using rule 37
	'.'            reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37
	']'            reduce using rule 37
	'?'            reduce using rule 37
	':'            reduce using rule 37


State 8

	Expr -> AVOGADRO .                                  (rule 39)

	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'*'            reduce using rule 39
	'/'            reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'%'            reduce using rule 39
	'=='           reduce using rule 39
	'**'           reduce using rule 39
	'>'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'>='           reduce using rule 39
	'!='           reduce using rule 39
	'&&'           reduce using rule 39
	'||'           reduce using rule 39
	';'            reduce using rule 39
	','            reduce using rule 39
	'.'            reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	']'            reduce using rule 39
	'?'            reduce using rule 39
	':'            reduce using rule 39


State 9

	Expr -> '-' . Expr                                  (rule 48)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 75

State 10

	Expr -> '(' . Expr ')'                              (rule 45)
	Expr -> '(' . Expr ',' ExprList ')'                 (rule 80)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 74

State 11

	Expr -> '!' . Expr                                  (rule 46)

	int            shift, and enter state 3
	real           shift, and enter state 4
	E              shift, and enter state 5
	PI             shift, and enter state 6
	PHI            shift, and enter state 7
	AVOGADRO       shift, and enter state 8
	'-'            shift, and enter state 9
	'('            shift, and enter state 10
	'!'            shift, and enter state 11
	'Math.sqrt'    shift, and enter state 12
	true           shift, and enter state 13
	false          shift, and enter state 14
	null           shift, and enter state 15
	var            shift, and enter state 16
	string         shift, and enter state 17
	if             shift, and enter state 18
	for            shift, and enter state 19
	function       shift, and enter state 20
	toString       shift, and enter state 21
	typeof         shift, and enter state 22
	print          shift, and enter state 23
	while          shift, and enter state 24
	match          shift, and enter state 25
	new            shift, and enter state 26
	this           shift, and enter state 27
	'['            shift, and enter state 28
	err            shift, and enter state 29
	isErr          shift, and enter state 30

	Expr           goto state 73

State 12

	Expr -> 'Math.sqrt' . '(' Expr ')'                  (rule 47)

	'('            shift, and enter state 72


State 13

	Expr -> true .                                      (rule 40)

	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'/'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'%'            reduce using rule 40
	'=='           reduce using rule 40
	'**'           reduce using rule 40
	'>'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'>='           reduce using rule 40
	'!='           reduce using rule 40
	'&&'           reduce using rule 40
	'||'           reduce using rule 40
	';'            reduce using rule 40
	','            reduce using rule 40
	'.'            reduce using rule 40
	'{'            reduce using rule 40
	'}'            reduce using rule 40
	']'            reduce using rule 40
	'?'            reduce using rule 40
	':'            reduce using rule 40


State 14

	Expr -> false .                                     (rule 41)

	'+'            reduce using rule 41
	'-'            reduce using rule 41
	'*'            reduce using rule 41
	'/'            reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'%'            reduce using rule 41
	'=='           reduce using rule 41
	'**'           reduce using rule 41
	'>'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'>='           reduce using rule 41
	'!='           reduce using rule 41
	'&&'           reduce using rule 41
	'||'           reduce using rule 41
	';'            reduce using rule 41
	','            reduce using rule 41
	'.'            reduce using rule 41
	'{'            reduce using rule 41
	'}'            reduce using rule 41
	']'            reduce using rule 41
	'?'            reduce using rule 41
	':'            reduce using rule 41


State 15

	Expr -> null .                                      (rule 42)

	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'%'            reduce using rule 42
	'=='           reduce using rule 42
	'**'           reduce using rule 42
	'>'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'>='           reduce using rule 42
	'!='           reduce using rule 42
	'&&'           reduce using rule 42
	'||'           reduce using rule 42
	';'            reduce using rule 42
	','            reduce using rule 42
	'.'            reduce using rule 42
	'{'            reduce using rule 42
	'}'            reduce using rule 42
	']'            reduce using rule 42
	'?'            reduce using rule 42
	':'            reduce using rule 42


State 16
